middle/log.txt
  File "hi.py", line 5
    return True
         ^
IndentationError: expected an indented block

